--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -35,7 +35,16 @@
 
       h2 {
         font-size: 2.5rem;
-        padding: 1.5rem 0 7rem;
+        padding: 1.5rem 0 1rem;
+        color: $color-3;
+        text-shadow: 1px 4px 1px $black;
+      }
+
+      p {
+        font-size: 1rem;
+
+        margin: 0% 5% 8% 0%;
+
         color: $color-3;
         text-shadow: 1px 4px 1px $black;
       }
