--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -42,9 +42,7 @@
 
       p {
         font-size: 1rem;
-
         margin: 0% 5% 8% 0%;
-
         color: $color-3;
         text-shadow: 1px 4px 1px $black;
       }
@@ -62,10 +60,89 @@
             background: $color-4;
           }
         }
+
+
       }
     }
   }
+
+  .showInfos {
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.507);
+    animation: popup .3s ease forwards;
+    transform-origin: center;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+    .infosContent {
+      position: relative;
+      margin: 0 auto;
+      color: $color-5;
+      background: $color-1;
+      border-radius: $borderRadius;
+      padding: 2rem;
+      box-shadow: 0 10px 10px #333;
+      animation: popup .6s ease forwards;
+      transform: scale(0);
+      transform-origin: center;
+      max-width: 80%;
+      max-height: 80%;
+      overflow-y: auto;
+
+
+
+      @keyframes popup {
+        to {
+          transform: scale(1);
+        }
+      }
+
+      .head {
+        display: flex;
+        justify-content: space-around;
+        margin: 1rem 0;
+      }
+
+      h2 {
+        text-align: left;
+        margin-bottom: 1rem;
+      }
+
+      .button {
+        cursor: pointer;
+        color: $color-1;
+        background: $color-5;
+        border-radius: $borderRadius;
+        padding: 1rem;
+        transition: .2s;
+
+        &:hover {
+          background: $color-4;
+        }
+      }
+
+      .text {
+        text-align: justify;
+        padding-bottom: 1rem;
+      }
+
+      .return {
+        margin: 1rem auto;
+        width: 200px;
+      }
+    }
+
+
+  }
 }
+
+
 
 @media screen and (max-width: 850px) {
   .homeContent {
